AEFL/develop (#42)
* Criando model Jogo

* Criando entidade Jogo

* Criando rotas jogos

* Criando CRUD jogos

* Criando CRUD jogos

* Documentação jogos

* Hotfix

* ajuste model Fase

* ajuste seeds

* Adicionando campos hora_jogo e id_campeonato

* Correção .gitignore

* links com protocolo
