# src/shared/docs/swagger.json
@@ -1304,6 +1304,10 @@
             "type": "string",
             "example": "06/07/2008"
           },
+          "hora_jogo": {
+            "type": "string",
+            "example": "17:51"
+          },
           "placar1": {
             "type": "integer"
           },
@@ -1315,6 +1319,9 @@
             "example": "Escolinha do professor Raimundo"
           },
           "id_fase": {
+            "type": "string"
+          },
+          "id_campeonato": {
             "type": "string"
           }
         }
